--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,3 +1,27 @@
-<header>
-    
+<header class="bg-success text-white text-center py-3">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-2">
+                <img src="files\SmartSpot.png" id="SmartSpotLogo" alt="SmartSpot Logo" class="img-fluid">
+            </div>
+            <div class="col-md-8">
+                <nav class="navbar navbar-expand-lg navbar-light bg-success justify-content-center">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link text-white" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="#">Profile</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+            <div class="col-md-2"></div> <!-- Empty column to push the navbar to the center -->
+        </div>
+    </div>
 </header>
