--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,7 +2,7 @@
     <div class="container">
         <!-- Welcome Section -->
         <div class="jumbotron text-center mt-5">
-            <p class="lead display-6" style="font-weight: bold;">Book Now!</p>
+            <h2 class="lead display-6" style="font-weight: bold;">Book Now!</h2>
         </div>
 
         <!-- Date, Faculty, Time Selection Form -->
@@ -25,7 +25,7 @@
                 <input type="time" class="form-control" id="timePicker" required>
             </div>
             <div class="text-center">
-                <button type="submit" class="btn btn-success">Search Parking</button> 
+                <a href="/home_faculty" class="btn btn-success">Search Parking</a>
             </div>
         </form>
     </div>
