--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,5 @@
-<footer>
-    
+<footer class="bg-success text-white py-3 fixed-bottom">
+    <div class="container-fluid text-center">
+        <p class="mb-0">&copy; 2024 SmartSpot. All rights reserved.</p>
+    </div>
 </footer>
