--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -15,24 +15,24 @@
                   <a class="nav-link text-white" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Profile</a>
+                  <a class="nav-link text-gray" href="#">Profile</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Bookings</a>
+                  <a class="nav-link text-gray" href="#">Bookings</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Favorites</a>
+                  <a class="nav-link text-gray" href="#">Favorites</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Settings</a>
+                  <a class="nav-link text-gray" href="#">Settings</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Help</a>
+                  <a class="nav-link text-gray" href="#">Help</a>
                 </li>
               </ul>
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Log Out</a>
+                  <a class="nav-link text-white border border-white rounded p-2" href="#">Log Out</a>
                 </li>
               </ul>
             </div>
