--- a/views/home.hbs
+++ b/views/home.hbs
@@ -25,12 +25,11 @@
                 <input type="time" class="form-control" id="timePicker" required>
             </div>
             <div class="text-center">
-                <a href="/home_faculty" class="btn btn-success">Search Parking</a>
+                <button type="button" class="btn btn-success" onclick="submitForm()">Continue</button>
             </div>
         </form>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
     
 </main>   
