--- a/views/home_faculty.hbs
+++ b/views/home_faculty.hbs
@@ -9,26 +9,20 @@
                 <img src="files\ECE_faculty.jpg" id="ECE_faculty" alt="ECE Faculty" class="img-fluid">
             </div>
             <div class="col-md-6">
-                <form action="/submit" method="post">
+                <form>
                     <div class="form-group">
                         <select id="parkingArea" name="parkingArea" class="form-control" required>
-                            <option value="" disabled selected>Area</option>
                             <option value="1">Area 1</option>
                             <option value="2">Area 2</option>
                             <option value="3">Area 3</option>
                         </select>
                     </div>
-                    <button type="submit" class="btn btn-success mt-3">Submit</button>
+                    <a href="/home_area" class="btn btn-success mt-3">Continue</button>
                 </form>
             </div>
         </div>
     </div>
 
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
     
 </main>   
