--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,19 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">  
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="style.css">
-        {{!-- <script src="script.js" defer ></script> --}}
+        <script src="script.js" defer ></script>
         <title>SmartSpot</title>
     </head>
 
     <body>
         {{>header}}
-
-        {{!-- <script>
-            const faculty={{faculty}};
-        </script> --}}
-            
         {{{ body }}}
         {{>footer}}
+
 	    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 
