--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -38,7 +38,7 @@
             </div>
           </nav>
         </div>
-        <div class="col-md-2"></div> <!-- Empty column to push the navbar to the center -->
+        <div class="col-md-2"></div> 
       </div>
     </div>
   </header>
