--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,7 @@
-<header class="bg-success text-white text-center py-3">
+<header class="bg-success text-white text-center py-2">
   <div class="container-fluid">
     <div class="row align-items-center">
-      <div class="col-md-2">
+      <div class="custom-img-size">
         <img src="files\SmartSpotLogo.png" id="SmartSpotLogo" alt="SmartSpot Logo" class="img-fluid">
       </div>
       <div class="col-md-8">
@@ -12,27 +12,27 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link text-white px-3 fs-5" href="#">Home</a>
+                <a class="nav-link text-white px-3" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-gray px-3 fs-5" href="#">Profile</a>
+                <a class="nav-link text-gray px-3" href="#">Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-gray px-3 fs-5" href="#">Bookings</a>
+                <a class="nav-link text-gray px-3" href="#">Bookings</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-gray px-3 fs-5" href="#">Favorites</a>
+                <a class="nav-link text-gray px-3" href="#">Favorites</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-gray px-3 fs-5" href="#">Settings</a>
+                <a class="nav-link text-gray px-3" href="#">Settings</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-gray px-3 fs-5" href="#">Help</a>
+                <a class="nav-link text-gray px-3" href="#">Help</a>
               </li>
             </ul>
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link text-white border border-white rounded p-2 mx-5 fs-5" href="#">Log Out</a>
+                <a class="nav-link text-white border border-white rounded p-2 mx-5" href="#">Log Out</a>
               </li>
             </ul>
           </div>
