fixed JS errors :)

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -24,9 +24,10 @@
                 <input type="time" class="form-control" id="timePicker" required>
             </div>
             <div class="text-center">
-                <button type="button" class="btn btn-success" onclick="submitForm()">Continue</button>
+                <button type="submit" class="btn btn-success" onclick="submitForm()">Continue</button>
             </div>
         </form>
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
