--- a/views/home_site.hbs
+++ b/views/home_site.hbs
@@ -9,6 +9,7 @@
                 <form class="text-center"> 
                     <div class="form-group my-3">
                         <select id="parkingSpot" name="parkingSpot" class="form-control" required>
+                            {{!-- options are created using JS --}}
                         </select>
                     </div>
                     <button type="submit" class="btn btn-success my-1">Book the spot!</button>
