--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -10,7 +10,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
                 <a class="nav-link text-white px-3" href="#">Home</a>
               </li>
@@ -32,7 +32,7 @@
             </ul>
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link text-white border border-white rounded p-2 mx-5" href="#">Log Out</a>
+                <a class="nav-link text-white border border-white rounded p-2" href="#">Log Out</a>
               </li>
             </ul>
           </div>
