trynna fix redirection button in home page

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,7 +6,7 @@
         </div>
 
         <!-- Date, Time, Parking Site Selection Form -->
-        <form>
+        <form id="bookingForm">
             <div class="form-group mb-3">
                 <label for="facultySelect">Select Parking Site:</label>
                 <select class="form-control" id="facultySelect" required>
