--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,7 +6,8 @@
         </div>
 
         <!-- Date, Time, Parking Site Selection Form -->
-        <form id="bookingForm">
+        <form method="post" action="/home/submit-form">
+        {{!-- <form id="bookingForm"> --}}
             <div class="form-group mb-3">
                 <label for="facultySelect">Select Parking Site:</label>
                 <select class="form-control" id="facultySelect" required>
@@ -24,7 +25,8 @@
                 <input type="time" class="form-control" id="timePicker" required>
             </div>
             <div class="text-center">
-                <button type="submit" class="btn btn-success" onclick="submitForm()">Continue</button>
+                {{!-- <a class="nav-link" href="home_site.hbs">Continue</a> --}}
+                <button type="submit" class="btn btn-success">Continue</button>
             </div>
         </form>
 
