submitting the full reservation

--- a/views/home_site.hbs
+++ b/views/home_site.hbs
@@ -8,9 +8,9 @@
 
                 <img src="files\ECE_1.png" id="ECE1" alt="ECE_1" class="img-fluid" style="width: 80%; display: block; margin: 0 auto;">
                
-                <form class="text-center"> 
+                <form class="text-center" method="post" action="/home/submit-success"> 
                     <div class="form-group my-3">
-                        <select id="parkingSpot" name="parkingSpot" class="form-control" required>
+                        <select id="parkingSpot" name="selectedParkingSpot" class="form-control" required>
                             {{!-- options are created using JS --}}
                         </select>
                     </div>
