--- a/views/reservation.hbs
+++ b/views/reservation.hbs
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-md-6 mx-auto"> 
                 <div class="text-center">
-                    <h4 class="my-3">Booking Details</h4>
+                    <h4 class="my-3"><u>Booking Details</u></h4>
                     {{!-- <h4 class="my-3">Parking Spot: {{reservation}}</h4>
                     <h4 class="my-3">Parking Spot: {{reservation.selectedParkingSpot}}</h4>
                     <h4 class="my-3">Parking Site: {{site}}</h4>
