--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -12,7 +12,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link text-white px-3" href="#">Home</a>
+                <a class="nav-link text-white px-3" href="/home">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-gray px-3" href="#">Profile</a>
