--- a/views/reservation.hbs
+++ b/views/reservation.hbs
@@ -14,7 +14,7 @@
                 </div>
             </div>
         </div>
-        <h3 style="font-weight: bold;" class="text-center">To make a new reservation go back to the Home Page</h3>
+        <h3 style="font-weight: bold;" class="text-center">To make a new reservation go back to the <a href="/home">Home Page</a></h3>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
