added all the parking spots of ECE100

--- a/views/home_site.hbs
+++ b/views/home_site.hbs
@@ -7,7 +7,9 @@
             <div class="col-md-6 mx-auto"> 
 
                 <img src="files\ECE_1.png" id="ECE1" alt="ECE_1" class="img-fluid" style="width: 80%; display: block; margin: 0 auto;">
-               
+                
+                {{!-- <iframe src="http://localhost:3000/d-solo/c8e86a97-e2fc-4218-a52d-24234a9cc564/test?orgId=1&from=1706548755364&to=1706721555364&panelId=3" width="450" height="200" frameborder="0"></iframe> --}}
+                
                 <form class="text-center" method="post" action="/home/submit-success"> 
                     <div class="form-group my-3">
                         <select id="parkingSpot" name="selectedParkingSpot" class="form-control" required>
